Fix: Update Docker image tags to use dns-gateway

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: ui3o/codebox:latest,ui3o/codebox:${{steps.tag.outputs.tag}}
+        tags: ui3o/dns-gateway:latest,ui3o/dns-gateway:${{steps.tag.outputs.tag}}
         platforms: linux/amd64,linux/arm64        
     # - name: "Docker Hub Description"
     #   uses: peter-evans/dockerhub-description@v3
